--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
       <p style="display: inline-block; background-color: #000; color: #fff; margin-top: 115px; font-size: 90px; padding: 30px; line-height: 1.2;">Фреймворки — это&nbsp;чужой&nbsp;говнокод</p><img src="pictures/evil.jpg" class="cover"/>
     </section>
     <section id="theend" class="slide">
-      <p style="position: absolute; bottom: 5%" class="end-link"><a href="http://bit.ly/tver.io-frameworks" target="_blank" class="bigger">bit.ly/tver.io-frameworks</a><br>Александра Шинкевич (<a href="https://twitter.com/neesoglasnaja" target="_blank">@neesoglasnaja</a>)</p><img src="pictures/the_end.gif" style="min-height: 240%; max-width: none" class="cover">
+      <p style="position: absolute; bottom: 5%" class="end-link"><a href="http://bit.ly/tver-frameworks" target="_blank" class="bigger">bit.ly/tver-frameworks</a><br>Александра Шинкевич (<a href="https://twitter.com/neesoglasnaja" target="_blank">@neesoglasnaja</a>)</p><img src="pictures/the_end.gif" style="min-height: 240%; max-width: none" class="cover">
     </section>
     <div class="progress"></div>
     <script src="shower/shower.min.js"></script>
