--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
           <li class="next">И Node.js</li>
           <li class="next">Была начальником отдела фронтенда</li>
           <li class="next">Выгорела</li>
-          <li class="next">Уволилась и счастливая безработная</li>
+          <li class="next">Уволилась и 6 месяцев не работала</li>
+          <li class="next">Lead Frontend Developer в Expert Soft</li>
         </ul>
         <p style="margin-top: 70px"><img src="pictures/minskcss.png" class="logo"><img src="pictures/minskjs.png" class="logo"><img src="pictures/css-minsk-js.svg" style="background-color: #2b2727; height: 75px" class="logo"></p>
       </div><img src="pictures/about-cover.jpg" class="cover"/>
@@ -50,6 +51,8 @@
     </section>
     <section id="" class="slide  no-page"><img src="pictures/inspiration.gif" style="width: 100%" class="cover">
     </section>
+    <section id="" class="slide  no-page"><img src="pictures/back.jpg" class="cover"/>
+    </section>
     <section id="" class="slide  no-page"><a href="https://www.youtube.com/watch?v=xPFRUM_oDKA" class="copyright">Andrey Listochkin — Anti hype как не гнаться за технологиями и начать жить</a><img src="pictures/listochkin.jpg" class="cover"/>
     </section>
     <section id="" class="slide"><a href="https://www.youtube.com/watch?v=p5g4giWmcvE" class="copyright">Алексей Симоменко — Как я перестал верить технологиям</a><img src="pictures/simonenko.jpg" class="cover"/>
@@ -69,6 +72,8 @@
       <h2>Претензия 1. Плохой язык</h2><img src="pictures/fake_js_logo.jpg" class="cover"/>
     </section>
     <section id="" class="slide"><img src="pictures/true_is_false.jpg" class="cover"/>
+    </section>
+    <section id="" class="slide"><img src="pictures/hard.gif" style="height: 100%" class="cover">
     </section>
     <section id="" class="slide"><img src="pictures/esnext.jpg" class="cover"/>
     </section>
@@ -161,6 +166,8 @@
     </section>
     <section id="" class="slide"><img src="pictures/swift-tweet.jpg" class="cover"/>
     </section>
+    <section id="" class="slide"><img src="pictures/maked.jpg" class="cover"/>
+    </section>
     <section id="" class="slide  no-page"><img src="pictures/explosion.gif" style="width: 100%; max-height: none;" class="cover">
     </section>
     <section id="" class="slide"><img src="pictures/history.jpg" class="cover"/>
@@ -215,6 +222,8 @@
     </section>
     <section id="" class="slide"><img src="pictures/angular.jpg" class="cover"/>
     </section>
+    <section id="" class="slide"><img src="pictures/svelte.png" class="cover"/>
+    </section>
     <section id="" class="slide">
       <h2>*Модульность</h2><img src="pictures/period_3.jpg" class="cover"/>
     </section>
@@ -244,6 +253,8 @@
     </section>
     <section id="" class="slide"><img src="pictures/quasar_ionic.jpg" class="cover"/>
     </section>
+    <section id="" class="slide"><img src="pictures/jamstack.jpg" class="cover"/>
+    </section>
     <section id="" class="slide"><img src="pictures/community.jpg" class="cover"/>
     </section>
     <section id="" class="slide">
@@ -267,7 +278,7 @@
       <p style="display: inline-block; background-color: #000; color: #fff; margin-top: 115px; font-size: 90px; padding: 30px; line-height: 1.2;">Фреймворки — это&nbsp;чужой&nbsp;говнокод</p><img src="pictures/evil.jpg" class="cover"/>
     </section>
     <section id="theend" class="slide">
-      <p style="position: absolute; bottom: 5%" class="end-link"><a href="http://bit.ly/tver-frameworks" target="_blank" class="bigger">bit.ly/tver-frameworks</a><br>Александра Шинкевич (<a href="https://twitter.com/neesoglasnaja" target="_blank">@neesoglasnaja</a>)</p><img src="pictures/the_end.gif" style="min-height: 240%; max-width: none" class="cover">
+      <p style="position: absolute; bottom: 5%" class="end-link"><a href="http://bit.ly/IWD-frameworks" target="_blank" class="bigger">bit.ly/IWD-frameworks</a><br>Александра Шинкевич (<a href="https://twitter.com/neesoglasnaja" target="_blank">@neesoglasnaja</a>)</p><img src="pictures/the_end.gif" style="min-height: 240%; max-width: none" class="cover">
     </section>
     <div class="progress"></div>
     <script src="shower/shower.min.js"></script>
