Update content with WASM

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li class="next">Уволилась и 6 месяцев не работала</li>
           <li class="next">Lead Frontend Developer в Expert Soft</li>
         </ul>
-        <p style="margin-top: 70px"><img src="pictures/minskcss.png" class="logo"><img src="pictures/minskjs.png" class="logo"><img src="pictures/css-minsk-js.svg" style="background-color: #2b2727; height: 75px" class="logo"></p>
+        <p style="margin-top: 50px"><img src="pictures/minskcss.png" class="logo"><img src="pictures/minskjs.png" class="logo"><img src="pictures/css-minsk-js.svg" style="background-color: #2b2727; height: 75px" class="logo"></p>
       </div><img src="pictures/about-cover.jpg" class="cover"/>
     </section>
     <section id="" class="slide"><img src="pictures/frameworks.jpg" class="cover"/><img src="pictures/confused.gif" style="position: absolute; left: 30%; bottom: -10%; width: 500px">
@@ -37,7 +37,7 @@
     <section id="" class="slide  no-page"><img src="pictures/bullet.jpg" class="cover"/><img src="pictures/no.png" class="cover  next"/>
     </section>
     <section id="" class="slide">
-      <h2>Что еще можно сказать про фреймворки?</h2>
+      <h2>Что ещё можно сказать про фреймворки?</h2>
       <ul>
         <li>Обзор платформы, пересказ документации</li>
         <li>Архитектура инструмента, хардкор</li>
@@ -274,7 +274,23 @@
     <section id="" class="slide  no-page"><img src="pictures/bullet.jpg" class="cover"/><img src="pictures/no.png" class="cover"/>
     </section>
     <section id="" class="slide">
-      <h2 style="color: #eee">P.P.S.</h2>
+      <h2 style="color: #fff">P.P.S.</h2><img src="pictures/webassembly.jpg" class="cover"/>
+    </section>
+    <section id="" class="slide"><a href="https://github.com/appcypher/awesome-wasm-langs" class="copyright">Awesome WebAssembly Languages</a><img src="pictures/wasm.jpg" class="cover"/>
+    </section>
+    <section id="" class="slide">
+      <h2>Фронтенд  - это еще и...</h2>
+      <ul>
+        <li>Бэкенд на Node.js</li>
+        <li class="next">Мобильная разработка на ReactNative/Ionic/Quasar/...</li>
+        <li class="next">Progressive Web Applications (PWA)</li>
+        <li class="next">Десктопные приложения на Electron</li>
+        <li class="next">3D-моделирование на WebGL</li>
+        <li class="next">И да, в <a href="https://habr.com/ru/post/374131/" target="_blank">браузере можно майнить</a>!</li>
+      </ul>
+    </section>
+    <section id="" class="slide">
+      <h2 style="color: #eee">P.P.P.S.</h2>
       <p style="display: inline-block; background-color: #000; color: #fff; margin-top: 115px; font-size: 90px; padding: 30px; line-height: 1.2;">Фреймворки — это&nbsp;чужой&nbsp;говнокод</p><img src="pictures/evil.jpg" class="cover"/>
     </section>
     <section id="theend" class="slide">
