--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </section>
     <section id="" class="slide"><img src="pictures/hard.gif" style="height: 100%" class="cover">
     </section>
-    <section id="" class="slide"><img src="pictures/esnext.jpg" class="cover"/>
+    <section id="" class="slide"><a href="http://www.ecma-international.org/ecma-262/10.0/index.html#Title" class="copyright">ECMA-262, 10th edition</a><img src="pictures/esnext.jpg" class="cover"/>
     </section>
     <section id="" class="slide  no-page"><a href="https://kangax.github.io/compat-table/es2016plus/" class="copyright">ECMAScript 2016+ compatibility table</a><img src="pictures/features.jpg" class="cover"/>
     </section>
@@ -222,10 +222,10 @@
     </section>
     <section id="" class="slide"><img src="pictures/angular.jpg" class="cover"/>
     </section>
-    <section id="" class="slide"><img src="pictures/svelte.png" class="cover"/>
-    </section>
     <section id="" class="slide">
       <h2>*Модульность</h2><img src="pictures/period_3.jpg" class="cover"/>
+    </section>
+    <section id="" class="slide"><img src="pictures/svelte.png" class="cover"/>
     </section>
     <section id="" class="slide"><img src="pictures/polymer.jpg" class="cover"/>
     </section>
@@ -255,8 +255,6 @@
     </section>
     <section id="" class="slide"><img src="pictures/jamstack.jpg" class="cover"/>
     </section>
-    <section id="" class="slide"><img src="pictures/community.jpg" class="cover"/>
-    </section>
     <section id="" class="slide">
       <h2>Подводя итог</h2>
       <ul>
@@ -271,6 +269,8 @@
     </section>
     <section id="" class="slide"><a href="https://medium.freecodecamp.org/a-realworld-comparison-of-front-end-frameworks-with-benchmarks-2019-update-4be0d3c78075" class="copyright">RealWorld Comparison</a><img src="pictures/realworld.jpg" class="cover"/>
     </section>
+    <section id="" class="slide"><img src="pictures/community.jpg" class="cover"/>
+    </section>
     <section id="" class="slide  no-page"><img src="pictures/bullet.jpg" class="cover"/><img src="pictures/no.png" class="cover"/>
     </section>
     <section id="" class="slide">
@@ -279,7 +279,7 @@
     <section id="" class="slide"><a href="https://github.com/appcypher/awesome-wasm-langs" class="copyright">Awesome WebAssembly Languages</a><img src="pictures/wasm.jpg" class="cover"/>
     </section>
     <section id="" class="slide">
-      <h2>Фронтенд  - это еще и...</h2>
+      <h2>Фронтенд — это ещё и...</h2>
       <ul>
         <li>Бэкенд на Node.js</li>
         <li class="next">Мобильная разработка на ReactNative/Ionic/Quasar/...</li>
